# causality-earth-science

./: .gitignore  .gitmodules  Build.hs  LICENSE.org  Makefile  Shakefile.hs  aerosolSunlight.gp  bidirected.dot  build.cabal  causality-start.org  causality.tex  cloud-aerosol.dot  def.tex  forcing-graph.dot  generic-graph.dot  hie.yaml  mutilated-cloud-aerosol.dot  naiveCloudSunlight.gp  no-temporal.dot  readme.org  reconstruction.dot  references.bib  stack.yaml
doc/: Makefile  causality.tex  def.tex  references.bib
dot/: ccope.dot  forcing-graph.dot  mutilated-cloud-aerosol.dot  observe-everything.dot  reconstruction.dot  unobserved-aerosol.dot
gnuplot/: aerosolSunlight.gp  naiveCloudSunlight.gp
src/: CloudSunlight.hs  GnuplotParser.hs  GraphDiagrams.hs
