cabal-version: 2.2

name:           build
version:        0.1.0.0
author:         Adam Massmann
maintainer:     akm2203@columbia.edu
copyright:      Copyright (c) 2020 Adam Massmann
license:        (BSD-3-Clause OR Apache-2.0)
license-file:   LICENSE.org
build-type:     Simple
extra-source-files:
    readme.org
    Makefile

common build-dependencies
  build-depends:
      base >=4.7 && <5
    , shake
    , spacetime-cause
    , bytestring
    , mwc-random
    , statistics
    , cassava
    , vector
  default-language: Haskell2010

executable build
  import: build-dependencies
  build-depends:
      build
  main-is: Shakefile.hs
  ghc-options: -rtsopts -threaded -with-rtsopts=-I0 -outputdir=_shake

library
  import: build-dependencies
  exposed-modules:
      CloudSunlight
  hs-source-dirs:
      src
